--- a/package.json
+++ b/package.json
@@ -4,11 +4,8 @@
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
-    "start": "ng serve",
-    "lint": "tslint \"src/**/*.ts\"",
-    "test": "ng test",
-    "pree2e": "webdriver-manager update",
-    "e2e": "protractor"
+    "start": "node server.js",
+    "postinstall": "gulp"
   },
   "private": true,
   "dependencies": {
