--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
-    "start": "node server.js"
+    "start": "node ./bin/www"
   },
   "private": true,
   "dependencies": {
