--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23",
-    "@angular/compiler-cli": "^2.1.0",
-    "@types/jasmine": "^2.2.30",
-    "@types/node": "^6.0.42",
     "angular-cli": "1.0.0-beta.20-4",
+    "@angular/compiler-cli": "^2.1.0",
+    "@types/node": "^6.0.42",
+    "@types/jasmine": "^2.2.30",
+    "typescript": "~2.0.3"
+  },
+  "devDependencies": {
     "codelyzer": "~1.0.0-beta.3",
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
@@ -43,10 +46,6 @@
     "protractor": "4.0.9",
     "ts-node": "1.2.1",
     "tslint": "3.13.0",
-    "typescript": "~2.0.3",
     "webdriver-manager": "10.2.5"
-  },
-  "devDependencies": {
-
   }
 }
