--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
-    "start": "http-server",
+    "heroku-prebuild": "npm install -g http-server",
+    "heroku-postbuild": "ng build --prod",
+    "start": "http-server dist/",
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test",
     "pree2e": "webdriver-manager update",
-    "e2e": "protractor",
-    "preinstall": "npm install -g http-server",
-    "postinstall": "ng build && mv dist/* ."
+    "e2e": "protractor"
   },
   "private": true,
   "dependencies": {
